# unsubscribe-emails

./: .gitignore  AGENT_WORKFLOW.md  README.md  browser-env.md  config.example.toml  ignored-senders.md  pyproject.toml  unsubscribe-done.md  unsubscribe-report.html  unsubscribe-review.md  unsubscribe-todo.md
src/unsubscribe_emails/: __init__.py  browser.py  cli.py  config.py  extract.py  gmail_client.py  models.py  oneclick.py  patterns.py  report.py  server.py  store.py  timeutil.py
tests/: test_browser_integration.py  test_extract.py  test_gmail_ingest.py  test_server.py  test_store_report.py  test_worker.py
